--- a/local/assets/styles/fonts.scss
+++ b/local/assets/styles/fonts.scss
@@ -1,11 +1,204 @@
+/**FontAwesome*/
+
 @import '../../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome';
 @import '../../../node_modules/@fortawesome/fontawesome-free/scss/regular';
 @import '../../../node_modules/@fortawesome/fontawesome-free/scss/solid';
 @import '../../../node_modules/@fortawesome/fontawesome-free/scss/brands';
 
+
+/**OpenSans*/
+
 @font-face {
-  font-family: 'os_reg';
-  src: url('../fonts/OpenSans-Regular.ttf') format('ttf');
+  font-family: 'open_sansbold';
+  src: url('../fonts/opensans-bold-webfont.eot');
+  src: url('../fonts/opensans-bold-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/opensans-bold-webfont.woff2') format('woff2'),
+  url('../fonts/opensans-bold-webfont.woff') format('woff'),
+  url('../fonts/opensans-bold-webfont.ttf') format('truetype'),
+  url('../fonts/opensans-bold-webfont.svg#open_sansbold') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'open_sansextrabold';
+  src: url('../fonts/opensans-extrabold-webfont.eot');
+  src: url('../fonts/opensans-extrabold-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/opensans-extrabold-webfont.woff2') format('woff2'),
+  url('../fonts/opensans-extrabold-webfont.woff') format('woff'),
+  url('../fonts/opensans-extrabold-webfont.ttf') format('truetype'),
+  url('../fonts/opensans-extrabold-webfont.svg#open_sansextrabold') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'open_sansitalic';
+  src: url('../fonts/opensans-italic-webfont.eot');
+  src: url('../fonts/opensans-italic-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/opensans-italic-webfont.woff2') format('woff2'),
+  url('../fonts/opensans-italic-webfont.woff') format('woff'),
+  url('../fonts/opensans-italic-webfont.ttf') format('truetype'),
+  url('../fonts/opensans-italic-webfont.svg#open_sansitalic') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'open_sanslight';
+  src: url('../fonts/opensans-light-webfont.eot');
+  src: url('../fonts/opensans-light-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/opensans-light-webfont.woff2') format('woff2'),
+  url('../fonts/opensans-light-webfont.woff') format('woff'),
+  url('../fonts/opensans-light-webfont.ttf') format('truetype'),
+  url('../fonts/opensans-light-webfont.svg#open_sanslight') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'open_sansregular';
+  src: url('../fonts/opensans-regular-webfont.eot');
+  src: url('../fonts/opensans-regular-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/opensans-regular-webfont.woff2') format('woff2'),
+  url('../fonts/opensans-regular-webfont.woff') format('woff'),
+  url('../fonts/opensans-regular-webfont.ttf') format('truetype'),
+  url('../fonts/opensans-regular-webfont.svg#open_sansregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'open_sanssemibold';
+  src: url('../fonts/opensans-semibold-webfont.eot');
+  src: url('../fonts/opensans-semibold-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/opensans-semibold-webfont.woff2') format('woff2'),
+  url('../fonts/opensans-semibold-webfont.woff') format('woff'),
+  url('../fonts/opensans-semibold-webfont.ttf') format('truetype'),
+  url('../fonts/opensans-semibold-webfont.svg#open_sanssemibold') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+/**Montserrat*/
+
+@font-face {
+  font-family: 'montserratblack';
+  src: url('../fonts/montserrat-black-webfont.eot');
+  src: url('../fonts/montserrat-black-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/montserrat-black-webfont.woff2') format('woff2'),
+  url('../fonts/montserrat-black-webfont.woff') format('woff'),
+  url('../fonts/montserrat-black-webfont.ttf') format('truetype'),
+  url('../fonts/montserrat-black-webfont.svg#montserratblack') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'montserratbold';
+  src: url('../fonts/montserrat-bold-webfont.eot');
+  src: url('../fonts/montserrat-bold-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/montserrat-bold-webfont.woff2') format('woff2'),
+  url('../fonts/montserrat-bold-webfont.woff') format('woff'),
+  url('../fonts/montserrat-bold-webfont.ttf') format('truetype'),
+  url('../fonts/montserrat-bold-webfont.svg#montserratbold') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'montserratextrabold';
+  src: url('../fonts/montserrat-extrabold-webfont.eot');
+  src: url('../fonts/montserrat-extrabold-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/montserrat-extrabold-webfont.woff2') format('woff2'),
+  url('../fonts/montserrat-extrabold-webfont.woff') format('woff'),
+  url('../fonts/montserrat-extrabold-webfont.ttf') format('truetype'),
+  url('../fonts/montserrat-extrabold-webfont.svg#montserratextrabold') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'montserratextralight';
+  src: url('../fonts/montserrat-extralight-webfont.eot');
+  src: url('../fonts/montserrat-extralight-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/montserrat-extralight-webfont.woff2') format('woff2'),
+  url('../fonts/montserrat-extralight-webfont.woff') format('woff'),
+  url('../fonts/montserrat-extralight-webfont.ttf') format('truetype'),
+  url('../fonts/montserrat-extralight-webfont.svg#montserratextralight') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'montserratitalic';
+  src: url('../fonts/montserrat-italic-webfont.eot');
+  src: url('../fonts/montserrat-italic-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/montserrat-italic-webfont.woff2') format('woff2'),
+  url('../fonts/montserrat-italic-webfont.woff') format('woff'),
+  url('../fonts/montserrat-italic-webfont.ttf') format('truetype'),
+  url('../fonts/montserrat-italic-webfont.svg#montserratitalic') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'montserratlight';
+  src: url('../fonts/montserrat-light-webfont.eot');
+  src: url('../fonts/montserrat-light-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/montserrat-light-webfont.woff2') format('woff2'),
+  url('../fonts/montserrat-light-webfont.woff') format('woff'),
+  url('../fonts/montserrat-light-webfont.ttf') format('truetype'),
+  url('../fonts/montserrat-light-webfont.svg#montserratlight') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'montserratmedium';
+  src: url('../fonts/montserrat-medium-webfont.eot');
+  src: url('../fonts/montserrat-medium-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/montserrat-medium-webfont.woff2') format('woff2'),
+  url('../fonts/montserrat-medium-webfont.woff') format('woff'),
+  url('../fonts/montserrat-medium-webfont.ttf') format('truetype'),
+  url('../fonts/montserrat-medium-webfont.svg#montserratmedium') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'montserratregular';
+  src: url('../fonts/montserrat-regular-webfont.eot');
+  src: url('../fonts/montserrat-regular-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/montserrat-regular-webfont.woff2') format('woff2'),
+  url('../fonts/montserrat-regular-webfont.woff') format('woff'),
+  url('../fonts/montserrat-regular-webfont.ttf') format('truetype'),
+  url('../fonts/montserrat-regular-webfont.svg#montserratregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'montserratsemibold';
+  src: url('../fonts/montserrat-semibold-webfont.eot');
+  src: url('../fonts/montserrat-semibold-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/montserrat-semibold-webfont.woff2') format('woff2'),
+  url('../fonts/montserrat-semibold-webfont.woff') format('woff'),
+  url('../fonts/montserrat-semibold-webfont.ttf') format('truetype'),
+  url('../fonts/montserrat-semibold-webfont.svg#montserratsemibold') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'montserratthin';
+  src: url('../fonts/montserrat-thin-webfont.eot');
+  src: url('../fonts/montserrat-thin-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/montserrat-thin-webfont.woff2') format('woff2'),
+  url('../fonts/montserrat-thin-webfont.woff') format('woff'),
+  url('../fonts/montserrat-thin-webfont.ttf') format('truetype'),
+  url('../fonts/montserrat-thin-webfont.svg#montserratthin') format('svg');
   font-weight: normal;
   font-style: normal;
 }
