--- a/local/assets/styles/_variables.scss
+++ b/local/assets/styles/_variables.scss
@@ -1,12 +1,4 @@
-$font-family: Verdana, Arial, Helverica, sans-serif;
-//$font-size-xs: 10px;
-//$font-size-sm: 12px;
-//$font-size-md: 16px;
-//$font-size-lg: 21px;
-//$font-size-xl: 25px;
-//$font-size-title: 28px;
-$screen-xs: 0;
-$screen-sm: 480px;
-$screen-md: 768px;
-$screen-lg: 992px;
-$screen-xl: 1280px;
+$opensans_regular: 'open_sansregular', Arial, sans-serif;
+$montserrat_regular: 'montserratregular', Arial, sans-serif;
+$montserrat_medium: 'montserratmedium', Arial, sans-serif;
+$montserrat_bold: 'montserratbold', Arial, sans-serif;
