--- a/local/assets/styles/blocks/header.scss
+++ b/local/assets/styles/blocks/header.scss
@@ -1,7 +1,29 @@
 .header {
-  &__inner {
-    box-sizing: border-box;
-    margin: 0 auto;
-    max-width: $screen-xl;
+  background-color: $black;
+}
+
+.header__logo {
+  height: 50px;
+  overflow: hidden;
+}
+
+.logo__img {
+  height: 100%;
+}
+
+.top-nav__item {
+  margin-left: 20px;
+
+  &:first-child {
+    margin-left: 0;
   }
+}
+
+.top-nav__link {
+  padding: 30px 12px;
+  text-transform: uppercase;
+  font-size: 12px;
+  color: $white;
+  font-family: $montserrat_bold;
+  display: block;
 }
