--- a/local/assets/styles/global.scss
+++ b/local/assets/styles/global.scss
@@ -1,11 +1,13 @@
-//@import 'fonts';
+
+@import '../../../node_modules/bootstrap/scss/bootstrap';
 
 @import 'variables';
 @import 'mixins';
-@import 'normalize';
 @import 'fonts';
-@import '../../../node_modules/bootstrap/scss/bootstrap';
 
-@import 'blocks/page';
+@import 'setups';
+
 @import 'blocks/header';
 @import 'blocks/footer';
+
+
