Изменена структура стилей, обновлен header

--- a/local/assets/styles/_setups.scss
+++ b/local/assets/styles/_setups.scss
@@ -13,7 +13,7 @@ html {
 body {
   height: 100%;
   margin: 0;
-  font-family: $montserrat_regular;
+  font-family: $opensans_regular;
   display: flex;
   flex-direction: column;
   font-size: $font-family-base;
