--- a/local/assets/styles/_variables.scss
+++ b/local/assets/styles/_variables.scss
@@ -1,4 +1,2 @@
 $opensans_regular: 'open_sansregular', Arial, sans-serif;
-$montserrat_regular: 'montserratregular', Arial, sans-serif;
-$montserrat_medium: 'montserratmedium', Arial, sans-serif;
-$montserrat_bold: 'montserratbold', Arial, sans-serif;
+$opensans_bold: 'open_sansbold', Arial, sans-serif;
