--- a/local/assets/styles/blocks/header.scss
+++ b/local/assets/styles/blocks/header.scss
@@ -24,6 +24,6 @@
   text-transform: uppercase;
   font-size: 12px;
   color: $white;
-  font-family: $montserrat_bold;
+  font-family: $opensans_bold;
   display: block;
 }
