--- a/local/assets/styles/global.css
+++ b/local/assets/styles/global.css
@@ -10731,24 +10731,6 @@ readers do not read off random characters that represent icons */
   font-weight: normal;
   font-style: normal; }
 @font-face {
-  font-family: 'open_sansextrabold';
-  src: url("../fonts/opensans-extrabold-webfont.eot");
-  src: url("../fonts/opensans-extrabold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/opensans-extrabold-webfont.woff2") format("woff2"), url("../fonts/opensans-extrabold-webfont.woff") format("woff"), url("../fonts/opensans-extrabold-webfont.ttf") format("truetype"), url("../fonts/opensans-extrabold-webfont.svg#open_sansextrabold") format("svg");
-  font-weight: normal;
-  font-style: normal; }
-@font-face {
-  font-family: 'open_sansitalic';
-  src: url("../fonts/opensans-italic-webfont.eot");
-  src: url("../fonts/opensans-italic-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/opensans-italic-webfont.woff2") format("woff2"), url("../fonts/opensans-italic-webfont.woff") format("woff"), url("../fonts/opensans-italic-webfont.ttf") format("truetype"), url("../fonts/opensans-italic-webfont.svg#open_sansitalic") format("svg");
-  font-weight: normal;
-  font-style: normal; }
-@font-face {
-  font-family: 'open_sanslight';
-  src: url("../fonts/opensans-light-webfont.eot");
-  src: url("../fonts/opensans-light-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/opensans-light-webfont.woff2") format("woff2"), url("../fonts/opensans-light-webfont.woff") format("woff"), url("../fonts/opensans-light-webfont.ttf") format("truetype"), url("../fonts/opensans-light-webfont.svg#open_sanslight") format("svg");
-  font-weight: normal;
-  font-style: normal; }
-@font-face {
   font-family: 'open_sansregular';
   src: url("../fonts/opensans-regular-webfont.eot");
   src: url("../fonts/opensans-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/opensans-regular-webfont.woff2") format("woff2"), url("../fonts/opensans-regular-webfont.woff") format("woff"), url("../fonts/opensans-regular-webfont.ttf") format("truetype"), url("../fonts/opensans-regular-webfont.svg#open_sansregular") format("svg");
@@ -10831,7 +10813,7 @@ html {
 body {
   height: 100%;
   margin: 0;
-  font-family: "montserratregular", Arial, sans-serif;
+  font-family: "open_sansregular", Arial, sans-serif;
   display: flex;
   flex-direction: column;
   font-size: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
@@ -10903,7 +10885,6 @@ a {
   background-color: #000; }
 
 .header__logo {
-  width: 200px;
   height: 50px;
   overflow: hidden; }
 
@@ -10920,7 +10901,7 @@ a {
   text-transform: uppercase;
   font-size: 12px;
   color: #fff;
-  font-family: "montserratbold", Arial, sans-serif;
+  font-family: "open_sansbold", Arial, sans-serif;
   display: block; }
 
 .footer__inner {
