--- a/local/assets/styles/blocks/footer.scss
+++ b/local/assets/styles/blocks/footer.scss
@@ -1,7 +1,12 @@
 .footer {
   &__inner {
-    box-sizing: border-box;
-    margin: 0 auto;
-    padding: 30px 50px 15px;
+    background-color: $black;
+    color: $white;
+  }
+
+  &__text {
+    padding: 20px 0;
+    justify-content: center;
+    text-align: center;
   }
 }
