--- a/local/assets/styles/blocks/header.scss
+++ b/local/assets/styles/blocks/header.scss
@@ -1,14 +1,56 @@
 .header {
   background-color: $black;
+  min-height: 70px;
+
+  &__col__nav {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+  }
+
+  &__logo__container {
+    height: 50px;
+    overflow: hidden;
+  }
 }
 
-.header__logo {
-  height: 50px;
-  overflow: hidden;
+.logo__link {
+  display: block;
 }
 
 .logo__img {
-  height: 100%;
+  display: block;
+  height: 50px;
+}
+
+.top-nav {
+  justify-content: flex-end;
+}
+
+.top-nav .top-nav__hamburger {
+  background-color: #302f2f;
+  padding: 10px 10px 0 10px;
+  border: none;
+  border-radius: 0;
+
+  .hamburger-icon {
+    color: $white;
+    font-size: 24px;
+  }
+}
+
+.top-nav__collapse {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.top-nav__list {
+  justify-content: flex-end;
+
+  @include media-breakpoint-down(md) {
+    flex-direction: column;
+    justify-content: center;
+  }
 }
 
 .top-nav__item {
@@ -16,6 +58,30 @@
 
   &:first-child {
     margin-left: 0;
+  }
+
+  @include media-breakpoint-down(md) {
+    margin: 0;
+  }
+
+  &.show {
+    .dropdown-menu {
+      background-color: $black;
+
+      .dropdown-item {
+        color: $white;
+        font-family: $opensans_bold;
+
+        &:hover {
+          color: $black;
+        }
+      }
+    }
+  }
+
+  & a.active {
+    color: $red;
+    border-bottom: 3px solid $red;
   }
 }
 
@@ -26,4 +92,18 @@
   color: $white;
   font-family: $opensans_bold;
   display: block;
+  text-align: right;
+  border-bottom: 3px solid transparent;
+  transition: all 0.5s ease;
+
+  &:hover {
+    color: $red;
+    text-decoration: none;
+    border-bottom: 3px solid $red;
+    transition: all 0.4s ease;
+  }
+}
+
+#bx-panel {
+  z-index: 1200 !important;
 }
