vaa/SUPPORT-109: Обновление структуры

--- a/local/assets/styles/_variables.scss
+++ b/local/assets/styles/_variables.scss
@@ -1,2 +1,4 @@
-$opensans_regular: 'open_sansregular', Arial, sans-serif;
-$opensans_bold: 'open_sansbold', Arial, sans-serif;
+$opensans_light: 'open_sans_light', Arial, sans-serif;
+$opensans_regular: 'open_sans_regular', Arial, sans-serif;
+$opensans_bold: 'open_sans_bold', Arial, sans-serif;
+$opensans_semibold: 'open_sans_semibold', Arial, sans-serif;
