--- a/local/assets/styles/_setups.scss
+++ b/local/assets/styles/_setups.scss
@@ -1,22 +1,33 @@
 /**main custom setups*/
 
 html {
+  font-size: 10px;
   height: 100%;
 
   &.html-hidden {
     overflow: hidden !important;
   }
 
-  font-size: 14px;
+  @include media-breakpoint-up(md){
+    font-size: 12px;
+  }
+
+  @include media-breakpoint-up(lg) {
+    font-size: 14px;
+  }
+
+  @include media-breakpoint-up(xl) {
+    font-size: 16px;
+  }
 }
 
 body {
-  min-height: 100vh;
-  margin: 0;
-  font-family: $opensans_regular;
   display: flex;
   flex-direction: column;
-  font-size: $font-family-base;
+  font-family: $opensans_light;
+  font-size: $font-size-base;
+  margin: 0;
+  min-height: 100vh;
   position: relative;
 
   &.body-hidden {
@@ -24,11 +35,17 @@ body {
   }
 }
 
-.main {
-  flex: 1;
-  padding-top: 70px;
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  min-height: 100vh;
+  padding-top: 60px;
   position: relative;
-  transition: all 0.4s ease;
+
+  @include media-breakpoint-up(md) {
+    padding-top: 80px;
+  }
 }
 
 ul {
@@ -51,19 +68,20 @@ h1, h2, h3, h4, h5 {
   box-sizing: border-box;
 }
 
-a {
+a,
+a:hover {
   text-decoration: none;
+  transition: 0.3s;
 }
 
-.no-padding-right {
-  padding-right: 0;
+a,
+a:hover,
+a:focus,
+a:active {
+  outline: none;
 }
 
-.no-padding-left {
-  padding-left: 0;
-}
-
-.no-padding-both {
-  padding-right: 0;
-  padding-left: 0;
+// Панель Bitrix
+#bx-panel {
+  z-index: 999999 !important;
 }
