--- a/local/assets/styles/blocks/footer.scss
+++ b/local/assets/styles/blocks/footer.scss
@@ -1,12 +1,39 @@
 .footer {
   &__inner {
-    background-color: $black;
+    background-color: gray;
     color: $white;
   }
 
-  &__text {
-    padding: 20px 0;
+  &__top {
+    padding: 30px 0;
+  }
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+  }
+
+  &__item {
+    margin-top: 10px;
+
+    &:first-child {
+      margin-top: 0;
+    }
+  }
+
+  &__link {
+    color: $white;
+
+    &:hover {
+      color: $yellow;
+    }
+  }
+
+  &__copyright {
+    padding: 10px 0;
     justify-content: center;
     text-align: center;
+    background-color: #0A3A68;
   }
 }
