--- a/local/assets/styles/blocks/header.scss
+++ b/local/assets/styles/blocks/header.scss
@@ -1,109 +1,23 @@
 .header {
-  background-color: $black;
-  min-height: 70px;
-
-  &__col__nav {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-  }
-
-  &__logo__container {
-    height: 50px;
-    overflow: hidden;
-  }
-}
-
-.logo__link {
-  display: block;
-}
-
-.logo__img {
-  display: block;
-  height: 50px;
-}
-
-.top-nav {
-  justify-content: flex-end;
-}
-
-.top-nav .top-nav__hamburger {
-  background-color: #302f2f;
-  padding: 10px 10px 0 10px;
-  border: none;
-  border-radius: 0;
-
-  .hamburger-icon {
-    color: $white;
-    font-size: 24px;
-  }
-}
-
-.top-nav__collapse {
+  z-index: 9999;
+  height: 60px;
+  min-height: 60px;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
   display: flex;
-  justify-content: flex-end;
-}
+  flex-direction: column;
+  justify-content: center;
+  background-color: gray;
 
-.top-nav__list {
-  justify-content: flex-end;
-
-  @include media-breakpoint-down(md) {
-    flex-direction: column;
-    justify-content: center;
-  }
-}
-
-.top-nav__item {
-  margin-left: 20px;
-
-  &:first-child {
-    margin-left: 0;
+  @include media-breakpoint-up(md) {
+    height: auto;
+    min-height: 80px;
   }
 
-  @include media-breakpoint-down(md) {
-    margin: 0;
+  &__inner {
+    display: flex;
+    flex-direction: row;
   }
-
-  &.show {
-    .dropdown-menu {
-      background-color: $black;
-
-      .dropdown-item {
-        color: $white;
-        font-family: $opensans_bold;
-
-        &:hover {
-          color: $black;
-        }
-      }
-    }
-  }
-
-  & a.active {
-    color: $red;
-    border-bottom: 3px solid $red;
-  }
-}
-
-.top-nav__link {
-  padding: 30px 12px;
-  text-transform: uppercase;
-  font-size: 12px;
-  color: $white;
-  font-family: $opensans_bold;
-  display: block;
-  text-align: right;
-  border-bottom: 3px solid transparent;
-  transition: all 0.5s ease;
-
-  &:hover {
-    color: $red;
-    text-decoration: none;
-    border-bottom: 3px solid $red;
-    transition: all 0.4s ease;
-  }
-}
-
-#bx-panel {
-  z-index: 1200 !important;
 }
