--- a/local/assets/styles/fonts.scss
+++ b/local/assets/styles/fonts.scss
@@ -9,7 +9,19 @@
 /**OpenSans*/
 
 @font-face {
-  font-family: 'open_sansbold';
+  font-family: 'open_sans_semibold';
+  src: url('../fonts/opensans-semibold-webfont.eot');
+  src: url('../fonts/opensans-semibold-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/opensans-semibold-webfont.woff2') format('woff2'),
+  url('../fonts/opensans-semibold-webfont.woff') format('woff'),
+  url('../fonts/opensans-semibold-webfont.ttf') format('truetype'),
+  url('../fonts/opensans-semibold-webfont.svg#open_sansbold') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'open_sans_bold';
   src: url('../fonts/opensans-bold-webfont.eot');
   src: url('../fonts/opensans-bold-webfont.eot?#iefix') format('embedded-opentype'),
   url('../fonts/opensans-bold-webfont.woff2') format('woff2'),
@@ -20,15 +32,26 @@
   font-style: normal;
 }
 
-
 @font-face {
-  font-family: 'open_sansregular';
+  font-family: 'open_sans_regular';
   src: url('../fonts/opensans-regular-webfont.eot');
   src: url('../fonts/opensans-regular-webfont.eot?#iefix') format('embedded-opentype'),
   url('../fonts/opensans-regular-webfont.woff2') format('woff2'),
   url('../fonts/opensans-regular-webfont.woff') format('woff'),
   url('../fonts/opensans-regular-webfont.ttf') format('truetype'),
   url('../fonts/opensans-regular-webfont.svg#open_sansregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'open_sans_light';
+  src: url('../fonts/opensans-light-webfont.eot');
+  src: url('../fonts/opensans-light-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/opensans-light-webfont.woff2') format('woff2'),
+  url('../fonts/opensans-light-webfont.woff') format('woff'),
+  url('../fonts/opensans-light-webfont.ttf') format('truetype'),
+  url('../fonts/opensans-light-webfont.svg#open_sansbold') format('svg');
   font-weight: normal;
   font-style: normal;
 }
