--- a/local/assets/styles/blocks/footer.scss
+++ b/local/assets/styles/blocks/footer.scss
@@ -31,9 +31,9 @@
   }
 
   &__copyright {
-    padding: 10px 0;
+    background-color: #0a3a68;
     justify-content: center;
+    padding: 10px 0;
     text-align: center;
-    background-color: #0A3A68;
   }
 }
