--- a/local/assets/styles/_setups.scss
+++ b/local/assets/styles/_setups.scss
@@ -3,21 +3,18 @@
 html {
   font-size: 10px;
   height: 100%;
-
-  &.html-hidden {
-    overflow: hidden !important;
-  }
-
-  @include media-breakpoint-up(md){
+  @include media-breakpoint-up(md) {
     font-size: 12px;
   }
-
   @include media-breakpoint-up(lg) {
     font-size: 14px;
   }
-
   @include media-breakpoint-up(xl) {
     font-size: 16px;
+  }
+
+  &.html-hidden {
+    overflow: hidden !important;
   }
 }
 
@@ -42,26 +39,29 @@ body {
   min-height: 100vh;
   padding-top: 60px;
   position: relative;
-
   @include media-breakpoint-up(md) {
     padding-top: 80px;
   }
 }
 
 ul {
-  padding: 0;
-  margin: 0;
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 p {
   margin: 0;
 }
 
-h1, h2, h3, h4, h5 {
-  margin-top: 0;
-  margin-bottom: 0;
+h1,
+h2,
+h3,
+h4,
+h5 {
   font-weight: normal;
+  margin-bottom: 0;
+  margin-top: 0;
 }
 
 * {
